# fira_hackathon_demo

./: CMakeLists.txt  README.md  package.xml
cfg_chal1/: simulation.yaml
cfg_chal1/paths/: test_01.traj
cfg_chal1/robots/robot/: base.yaml  teleop.yaml
cfg_chal2/: simulation.yaml  wgs84_anchor.yaml
cfg_chal2/paths/: fira_hackathon_evaluation.traj
cfg_chal2/robots/robot/: base.yaml  devices.yaml
cfg_chal2/robots/robot/devices/: mrs1xxx.lidar.yaml
cfg_chal2/robots/vehicle0/: base.yaml
cfg_chal3/: simulation.yaml
cfg_chal3/paths/: fira_hackathon_01.traj
cfg_chal3/robots/robot/: base.yaml
cfg_chal3/robots/vehicle0/: devices.yaml  path_following.yaml  path_matching.yaml
cfg_demo/: simulation.yaml  wgs84_anchor.yaml
cfg_demo/paths/: fira_hackathon_01.traj
cfg_demo/robots/robot/: path_following.yaml
cfg_demo/robots/robot/devices/: axis.camera.yaml  realsense.rgbd_camera.yaml
config/: path_following.yaml  path_matching.yaml  records.yaml  simulation.yaml  wgs84_anchor.yaml
config/robot/: base.yaml
config/robots/robot/: base.yaml  path_following.yaml
config/robots/robot/devices/: zed1.stereo_camera.yaml
config/robots/vehicle0/: base.yaml  devices.yaml  path_following.yaml  path_matching.yaml
data/: out.traj
launch/: challenge1.launch.py  challenge2.launch.py  challenge3.launch.py  demo.launch.py  robot.launch.py  vehicle.launch.py
rviz/: demo.rviz
scripts/: challenge1.py
