<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fira_hackathon_demo</name>
  <version>0.0.0</version>
  <description>Package containing hackathon fira demo.</description>

  <maintainer email="cyrille.pierre@inrae.fr">Cyrille Pierre</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>ament_index_python</depend>
  <depend>tirrex_demo</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
